cmake_minimum_required(VERSION 3.9)
project(LeetCode)

set(CMAKE_CXX_STANDARD 11)

add_executable(LeetCode main.cpp "001. Two Sum/solution.h" "002. Reverse Integer/solution.h" "003. Palindrome Number/solution.h" "004. Roman to Integer/solution.h" "005. Longest Common Prefix/solution.h" "006. Valid Parentheses/solution.h" "007. Merge Two Sorted Lists/solution.h" "008. Remove Duplicates from Sorted Array/solution.h" "009. Remove Element/solution.h")